--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springtest?serverTimezone=Asia
 spring.datasource.username=root
 spring.datasource.password=password
 
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 spring.jpa.show-sql=true
