--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
