各個功能新增測試完成，前端已修改到可以接到資料並呈現畫面

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=password
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# ?? Hibernate ???????
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
